--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ xattr = "1.3.1"
 tempfile = "3.9.0"
 rand = { version = "0.8", features = ["small_rng"] }
 utmpx = "0.1"
+hostname = "0.3"
 
 [dependencies]
 clap = { workspace = true }
