--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 # hostname (uutils)
 # * see the repository LICENSE, README, and CONTRIBUTING files for more information
 
-# spell-checker:ignore (libs) bigdecimal datetime fundu gethostid kqueue libselinux mangen memmap procfs uuhelp
+# spell-checker:ignore (libs) mangen procfs
 
 [package]
 name = "hostname"
