--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,12 +37,13 @@ clap_mangen = "0.2.20"
 regex = "1.10.4"
 sysinfo = "0.34.0"
 libc = "0.2.154"
+errno = "0.3"
 phf = "0.11.2"
 phf_codegen = "0.11.2"
 textwrap = { version = "0.16.1", features = ["terminal_size"] }
 xattr = "1.3.1"
 tempfile = "3.10.1"
-rand = { version = "0.8.5", features = ["small_rng"] }
+rand = { version = "0.9.0", features = ["small_rng"] }
 utmpx = "0.2"
 hostname = "0.4"
 
