--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,14 @@ xattr = "1.3.1"
 tempfile = "3.10.1"
 rand = { version = "0.9.0", features = ["small_rng"] }
 utmpx = "0.2"
-hostname = "0.4"
+windows-sys = { version = "0.59", features = [
+  "Win32_Globalization",
+  "Win32_Networking_WinSock",
+  "Win32_NetworkManagement_IpHelper",
+  "Win32_NetworkManagement_Ndis",
+  "Win32_System_SystemInformation",
+  "Win32_Foundation",
+] }
 
 [dependencies]
 clap = { workspace = true }
