--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,7 +44,7 @@ xattr = "1.3.1"
 tempfile = "3.10.1"
 rand = { version = "0.8.5", features = ["small_rng"] }
 utmpx = "0.2"
-hostname = "0.4"
+hostname = { version = "0.4", features = ["set"] }
 
 [dependencies]
 clap = { workspace = true }
