--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ feat_common_core = [
 
 [workspace.dependencies]
 uucore = "0.0.30"
+uutests = "0.0.30"
+ctor = "0.4.1"
 clap = { version = "4.5.4", features = ["wrap_help", "cargo"] }
 clap_complete = "4.5.2"
 clap_mangen = "0.2.20"
@@ -72,6 +74,8 @@ regex = { workspace = true }
 tempfile = { workspace = true }
 libc = { workspace = true }
 rand = { workspace = true }
+uutests = { workspace = true }
+ctor = { workspace = true }
 uucore = { workspace = true, features = ["entries", "process", "signals"] }
 
 [target.'cfg(unix)'.dev-dependencies]
