--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,6 +26,7 @@ uudoc = []
 
 feat_common_core = [
   "hostname",
+  "domainname"
 ]
 
 [workspace.dependencies]
@@ -66,6 +67,7 @@ textwrap = { workspace = true }
 
 #
 hostname = { optional = true, version = "0.0.1", package = "uu_hostname", path = "src/uu/hostname" }
+domainname = { optional = true, version = "0.0.1", package = "uu_domainname", path = "src/uu/domainname" }
 
 [dev-dependencies]
 pretty_assertions = "1.4.0"
