fixed windows implementation of domainname

--- a/src/uu/domainname/Cargo.toml
+++ b/src/uu/domainname/Cargo.toml
@@ -15,8 +15,8 @@ categories = ["command-line-utilities"]
 uucore = { workspace = true }
 clap   = { workspace = true }
 
-# [target.'cfg(target_os = "windows")'.dependencies]
-# windows-sys = { workspace = true }
+[target.'cfg(target_os = "windows")'.dependencies]
+windows-sys = { workspace = true }
 
 [target.'cfg(not(target_os = "windows"))'.dependencies]
 errno = { workspace = true }
